# project-car-archive

./: .gitattributes  .gitignore  LICENSE  README.md
2014/: README.md
2014/Communications/: README.MD
2014/Communications/car-wire/: master_car_wire.cpp  master_car_wire.h  slave_car_wire.cpp  slave_car_wire.h
2014/Driving/: Emergency stop app.txt
2014/Driving/car_motor_driver/: car_motor_driver.ino  car_motor_driver.vcxproj
2014/Driving/new_car_motor_driver/: new_car_motor_driver.ino  new_car_motor_driver.vcxproj
2014/Driving/slalom/: slalom.ino
2014/Driving/timed_run/: timed_run.ino
2014/IMU-GPS/: README.MD
2014/IMU-GPS/SF9DOF_AHRS/: ADXL345.cpp  ADXL345.h  Compass.ino  DCM.ino  HMC5883L.cpp  HMC5883L.h  I2C.ino  L3G4200D.cpp  L3G4200D.h  Output.ino  SF9DOF_AHRS.ino
2014/Vision/: README.md
2014/Vision/OpenCV_Test/: CMakeLists.txt  DisplayImage.cpp  Makefile
2014/Vision/camcv/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  RaspiVid.c  camcv.c  camcv.cpp~  camcv.c~  cmake_install.cmake
2014/Vision/camcv/Experimental - OLD/: README.md  README.md~  camcv.DJ  camcv.c.LK  camcv.c.Linsanity  camcv.c.filtered_video  camcv.c.filtered~  camcv.c.goodPointsToTrack  camcv.c.lessRecent  camcv.c.moreLinsane  camcv.c.orange_filter  camcv.c.serial  camcv.c.single_still  camcv.c.stills_video  camcv.cpp
2014/Vision/camcv/gl_scenes/: RaspiTex.h
2015/: README.md
2015/Battery Management/WEBots_Project_Car_Battery_Management_2015/: PIC16F917 Battery Management.c  PIC16F946 Battery Management.c  adc.h  i2c.h  lcd.h  main.c  setup.h  timer0.h
2015/Collision_Avoidance/: Collision_Avoidance.ino
2015/Driving/: Emergency stop app.js  Emergency stop app.txt  car controller.js
2015/Driving/car_motor_driver/: car_motor_driver.ino  car_motor_driver.sdf  car_motor_driver.sln  car_motor_driver.vcxproj  car_motor_driver.vcxproj.filters  communication_parser.c
2015/Driving/motor_controller_programmer/: motor_controller_programmer.ino
2015/Encoder/Encoder Board.X/: Interrupts.c  Interrupts.h  Variable_Init.h  main.c  p33FJ06GS101A.inc
2015/Encoder/Odometer.X/: Interrupts.c  Interrupts.h  Variable_Init.h  main.c  main_polling.c  p33FJ06GS101A.h
2015/Vision/: Pi Configuration Details.rtf  README.md  spoofmac.sh  stage1_control.bash  stage1_training.bash  stage2.bash
2015/Vision/ROS/iarrcMlVision/: CMakeLists.txt  package.xml
2015/Vision/ROS/iarrcMlVision/launch/: run_control.launch
2015/Vision/ROS/iarrcMlVision/src/: iarrcMlVision_node.cpp
2016/: GPS.c  UART.h
2016/CAN_to_USB_transceiver.X/: CAN.c  CAN.h  CAN_Msg_Priorities.h  Config.c  Init.c  Init.h  UART.c  UART.h  USB.c  USB.h  main.c
2016/CAR_IMU:GPS/: quaternion.cpp  quaternion.h  structs.cpp  structs.h  vector3d.cpp  vector3d.h
2016/PWM library for jake/: PWM.c
2016/WEbots_CAR_IMU&GPS.X/: CAR_gps_comms.c  GPS.c  GPS.h  IMU_XC16.c  MPU9250.c  MPU9250.h  UART.h  quaternion.c  quaternion.h  structs.h  vector3d.h
2016/motorboard.X/: Config.c  PWM.h  UART.c  UART.h  externInterrupt.c  externInterrupt.h  inputCapture.c  inputCapture.h  main.c  userVariables.h
2016/vision/: JetsonSetup.txt
2016/vision/car-ros/: LICENSE  (+2 more)
(+94 files in other folders)
